# FlowState

./: .env.example  .gitignore  .npmignore  .shipablesignore  Dockerfile  PLAN.md  README.md  SKILL.md  demo_fail.sh  pyproject.toml  shipables.json
flowstate/: config.py  main.py  overlay.py  state.py
flowstate/agents/: assessor.py  control.py  negotiator.py  orchestrator.py  sentiment.py
flowstate/api/: server.py
flowstate/streams/: screen_context.py  webcam_monitor.py
flowstate/tools/: augment.py  gemini.py  unkey.py
tests/: test_api.py  test_gemini.py  test_orchestrator.py  test_state.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/compact/: layout.tsx  page.tsx
ui/components/: ActionFeed.tsx  HandoffModal.tsx  SentinelStatusBar.tsx  TaskContextCard.tsx
ui/hooks/: useFlowState.ts
